[gd_scene load_steps=10 format=3 uid="uid://dllxxfb4r7byt"]

[ext_resource type="Script" uid="uid://bu5bi4qch76a2" path="res://scenes/hack_screen.gd" id="1_6lnsm"]
[ext_resource type="Texture2D" uid="uid://bh0ii57sl4erb" path="res://scenes/8852667.jpg" id="1_qxx0d"]
[ext_resource type="Theme" uid="uid://ceib3ahvc5st5" path="res://themes/theme1.tres" id="2_6lnsm"]
[ext_resource type="FontFile" uid="uid://d3pf6sdbn32rp" path="res://sprites/fonts/Roboto_Mono/RobotoMono-VariableFont_wght.ttf" id="3_yj6jf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48qdf"]
bg_color = Color(1, 0.596078, 0.898039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ms515"]
bg_color = Color(1, 0.596078, 0.898039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yj6jf"]
bg_color = Color(1, 0.623529, 0.905882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6lnsm"]
bg_color = Color(1, 0.596078, 0.898039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7kbjv"]
bg_color = Color(1, 0.596078, 0.898039, 1)

[node name="HackScreen" type="Node2D"]
script = ExtResource("1_6lnsm")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(639, 353)
texture = ExtResource("1_qxx0d")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 92.0
offset_top = 90.0
offset_right = 604.0
offset_bottom = 594.0
color = Color(1, 0, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 668.0
offset_top = 90.0
offset_right = 1180.0
offset_bottom = 594.0
color = Color(1, 0, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="Polygon2D2" type="Polygon2D" parent="."]
position = Vector2(-260, 34)
color = Color(0.215902, 0.215902, 0.215902, 1)
polygon = PackedVector2Array(360, 64, 856, 64, 856, 552, 360, 552)

[node name="Polygon2D3" type="Polygon2D" parent="."]
position = Vector2(316, 34)
color = Color(0.215902, 0.215902, 0.215902, 1)
polygon = PackedVector2Array(360, 64, 856, 64, 856, 552, 360, 552)

[node name="ColorRect5" type="ColorRect" parent="."]
offset_left = 393.0
offset_top = 29.0
offset_right = 877.0
offset_bottom = 73.0
color = Color(1, 0, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect4" type="ColorRect" parent="."]
offset_left = 395.0
offset_top = 31.0
offset_right = 875.0
offset_bottom = 71.0
color = Color(1, 0.596078, 0.898039, 1)
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 458.0
offset_top = 30.0
offset_right = 712.0
offset_bottom = 62.0
scale = Vector2(1.5, 1.698)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_yj6jf")
theme_override_font_sizes/normal_font_size = 0
text = "What should I post next?"
metadata/_edit_use_anchors_ = true

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = 496.0
offset_top = 636.0
offset_right = 784.0
offset_bottom = 704.0
color = Color(1, 0, 1, 1)

[node name="Post4" type="Button" parent="."]
offset_left = 500.0
offset_top = 640.0
offset_right = 780.0
offset_bottom = 700.0
theme = ExtResource("2_6lnsm")
theme_override_fonts/font = ExtResource("3_yj6jf")
theme_override_styles/focus = SubResource("StyleBoxFlat_48qdf")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ms515")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_yj6jf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6lnsm")
theme_override_styles/normal = SubResource("StyleBoxFlat_7kbjv")
text = "POST!"
metadata/_edit_use_anchors_ = true

[node name="glitches" type="Node2D" parent="."]

[node name="glitch 1" type="Node2D" parent="glitches"]
position = Vector2(44, -148)

[node name="blue" type="ColorRect" parent="glitches/glitch 1"]
offset_right = 104.0
offset_bottom = 52.0
color = Color(0, 0, 1, 1)

[node name="green" type="ColorRect" parent="glitches/glitch 1"]
offset_left = 36.0
offset_top = 40.0
offset_right = 156.0
offset_bottom = 72.0
color = Color(0, 1, 0, 1)

[node name="red" type="ColorRect" parent="glitches/glitch 1"]
offset_left = 28.0
offset_top = 32.0
offset_right = 108.0
offset_bottom = 60.0
color = Color(1, 0, 0, 1)

[node name="glitch 2" type="Node2D" parent="glitches"]
position = Vector2(244, -164)

[node name="blue2" type="ColorRect" parent="glitches/glitch 2"]
offset_left = 1271.0
offset_top = 64.0
offset_right = 1362.0
offset_bottom = 100.0
rotation = 3.14159
color = Color(0, 0, 1, 1)

[node name="green2" type="ColorRect" parent="glitches/glitch 2"]
offset_left = 1284.0
offset_top = 44.0
offset_right = 1371.0
offset_bottom = 70.0
rotation = 3.14159
color = Color(0, 1, 0, 1)

[node name="red2" type="ColorRect" parent="glitches/glitch 2"]
offset_left = 1295.0
offset_top = 52.0
offset_right = 1375.0
offset_bottom = 72.0
rotation = 3.14159
color = Color(1, 0, 0, 1)

[node name="glitch 3" type="Node2D" parent="glitches"]
position = Vector2(-296, 432)

[node name="green" type="ColorRect" parent="glitches/glitch 3"]
offset_left = 80.0
offset_top = 12.0
offset_right = 204.0
offset_bottom = 72.0
color = Color(0, 1, 0, 1)

[node name="red" type="ColorRect" parent="glitches/glitch 3"]
offset_left = 60.0
offset_top = 32.0
offset_right = 160.0
offset_bottom = 88.0
color = Color(1, 0, 0, 1)

[node name="blue" type="ColorRect" parent="glitches/glitch 3"]
offset_left = 44.0
offset_right = 136.0
offset_bottom = 52.0
color = Color(0, 0, 1, 1)

[node name="glitch 4" type="Node2D" parent="glitches"]
position = Vector2(1320, 456)

[node name="blue" type="ColorRect" parent="glitches/glitch 4"]
offset_right = 104.0
offset_bottom = 52.0
color = Color(0, 0, 1, 1)

[node name="green" type="ColorRect" parent="glitches/glitch 4"]
offset_left = 36.0
offset_top = 40.0
offset_right = 164.0
offset_bottom = 80.0
color = Color(0, 1, 0, 1)

[node name="red" type="ColorRect" parent="glitches/glitch 4"]
offset_left = 28.0
offset_top = 24.0
offset_right = 136.0
offset_bottom = 60.0
color = Color(1, 0, 0, 1)

[node name="glitch 5" type="Node2D" parent="glitches"]
position = Vector2(240, 792)

[node name="blue" type="ColorRect" parent="glitches/glitch 5"]
offset_right = 104.0
offset_bottom = 52.0
color = Color(0, 0, 1, 1)

[node name="green" type="ColorRect" parent="glitches/glitch 5"]
offset_left = 36.0
offset_top = 40.0
offset_right = 164.0
offset_bottom = 80.0
color = Color(0, 1, 0, 1)

[node name="red" type="ColorRect" parent="glitches/glitch 5"]
offset_left = 28.0
offset_top = 24.0
offset_right = 136.0
offset_bottom = 60.0
color = Color(1, 0, 0, 1)

[node name="glitch 6" type="Node2D" parent="glitches"]
position = Vector2(56, -236)

[node name="blue2" type="ColorRect" parent="glitches/glitch 6"]
offset_left = 1271.0
offset_top = 64.0
offset_right = 1362.0
offset_bottom = 100.0
rotation = 3.14159
color = Color(0, 0, 1, 1)

[node name="green2" type="ColorRect" parent="glitches/glitch 6"]
offset_left = 1284.0
offset_top = 44.0
offset_right = 1371.0
offset_bottom = 70.0
rotation = 3.14159
color = Color(0, 1, 0, 1)

[node name="red2" type="ColorRect" parent="glitches/glitch 6"]
offset_left = 1295.0
offset_top = 52.0
offset_right = 1375.0
offset_bottom = 72.0
rotation = 3.14159
color = Color(1, 0, 0, 1)

[connection signal="pressed" from="Post4" to="." method="_on_post_4_pressed"]
